fix(master-detail): hide x overflow

--- a/addon/styles/_master-detail.scss
+++ b/addon/styles/_master-detail.scss
@@ -92,6 +92,7 @@
     flex: 1 1 auto;
     min-width: 0;
     overflow-y: auto;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
     
     .container {
